# VUT-FIT

./: README.md
AVS_computation_systems_architectures/: README.md
BIF_bioinformatics/: README.md
FLP_functional_and_logic_programming/: README.md
IAL_algorithms/: README.md
IDS_database_systems/: README.md  db_commands.sql  mydb.sql
IIS_information_systems/: README.md
IJA_java_programming_language/: README.md
IJC_the_C_programming_language/: README.md
IMP_microprocessors_and_embedded_systems/: README.md
IMS_modelling_and_simulations/: CMakeLists.txt  README.md  dolphin.cpp  dolphin.h  dolphin_simulation.cpp  dolphin_simulation.h  garbage.cpp  garbage.h  killer_whale.cpp  killer_whale.h  killer_whale_simulation.cpp  killer_whale_simulation.h  main.cpp  turtle.cpp  turtle.h  turtle_simulation.cpp  turtle_simulation.h  whale.cpp  whale.h  whale_simulation.cpp  whale_simulation.h
INC_digital_system_design/: README.md
INP_design_of_computer_systems/: README.md
IOS_operating_systems/: README.md  project_1_bash
IPK_computer_communications_and_networks/: README.md
IPP_principles_of_programming_languages/: README.md
IPS_programming_seminar/: README.md
ISA_network_applications_and_network_administration/: Makefile  README.md  createConnection.cpp  createConnection.h  createResponse.cpp  createResponse.h  filterDomains.cpp  filterDomains.h  main.cpp  processArgs.cpp  processArgs.h  processRequest.cpp  processRequest.h
ISS_signals_and_systems/: README.md
ITS_testing_and_dynamic_analyses/: README.md
ITU_user_interface_programming/: README.md
(+256 files in other folders)
